Added functions to Ideas

--- a/C#/Ideas/Views/Home/Dashboard.cshtml
+++ b/C#/Ideas/Views/Home/Dashboard.cshtml
@@ -3,7 +3,7 @@
 }
 @model dojoTest.Models.UserPost
 <h1>Hey, @ViewBag.UserName</h1>
-<h4><a href="/logout">Log out</a></h4>
+<h4><a href="/user/@ViewBag.User.UserId">Profile</a> | <a href="/logout">Log out</a></h4>
 <hr>
 <h2>★ Write something bright here! ★</h2>
 @TempData["PostError"]
@@ -19,13 +19,26 @@
             <h4><a href="user/@post.UserId">@post.Poster.FirstName</a> says:</h4>
             <p>@post.Content </p>
             <span class="time-right"> @post.Created_At</span>
-            @if(@post.Likes.Count == 1)
+
+            bool heart = false;
+            foreach (var like in @post.Likes)
             {
-                <h5><a href="/like/@post.PostId">♡ Like</a> | <a href="/post/@post.PostId"> @post.Likes.Count Like</a></h5>
+                if(@ViewBag.LoggedinUser == like.UserId)
+                {
+                    heart = true;
+                }
+            }
+            @if(@post.Likes.Count == 1 && @heart == true)
+            {
+                <h5><a href="/like/@post.PostId">❤ Like</a> | <a href="/post/@post.PostId"> @post.Likes.Count Like</a></h5>
+            }
+            else if(@post.Likes.Count > 1 && @heart == true)
+            {
+                <h5><a href="/like/@post.PostId">❤ Like</a> | <a href="/post/@post.PostId"> @post.Likes.Count Likes</a></h5>
             }
             else
             {
-                <h5><a href="/like/@post.PostId">♡ Like</a> | <a href="/post/@post.PostId"> @post.Likes.Count Likes</a></h5>
+                <h5><a href="/like/@post.PostId">♡ Like</a> | <a href="/post/@post.PostId"> @post.Likes.Count Likes</a></h5>                   
             }
             @if(ViewBag.LoggedinUser == @post.UserId)
             {
