--- a/C#/Ideas/Views/Home/UserPage.cshtml
+++ b/C#/Ideas/Views/Home/UserPage.cshtml
@@ -9,5 +9,5 @@
 <hr>
 <hr>
 <h5>Total number of posts: @ViewBag.User.Posts.Count</h5>
-<h5>Total Number of likes: @ViewBag.User.Likes.Count</h5>
+<h5>Total Number of likes: @ViewBag.Likes.Count</h5>
 
