--- a/C#/Ideas/Views/Shared/_Layout.cshtml
+++ b/C#/Ideas/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
             asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.css"
             asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
     
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="../../wwwroot/css/site.css" />
 </head>
 <body>
     <div class="container body-content">
