--- a/AngularASP.NET/vega/ClientApp/app/components/fetchdata/fetchdata.component.html
+++ b/AngularASP.NET/vega/ClientApp/app/components/fetchdata/fetchdata.component.html
@@ -1,4 +1,5 @@
-<h1>Weather forecast</h1>
+<h1>Weather forecast 2</h1>
+
 
 <p>This component demonstrates fetching data from the server.</p>
 
@@ -16,7 +17,7 @@
     <tbody>
         <tr *ngFor="let forecast of forecasts">
             <td>{{ forecast.dateFormatted }}</td>
-            <td>{{ forecast.temperatureC }}</td>
+            <td>{{ forecast.tempertureC }}</td>
             <td>{{ forecast.temperatureF }}</td>
             <td>{{ forecast.summary }}</td>
         </tr>
