--- a/AngularASP.NET/vega/ClientApp/app/components/vehicle-form/vehicle-form.component.html
+++ b/AngularASP.NET/vega/ClientApp/app/components/vehicle-form/vehicle-form.component.html
@@ -14,10 +14,31 @@
         <option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>
     </select>
   </div>
+  <p>Is this vehicle registered?</p>
+  <label for="registered">
+      <input type="radio" value="true"  name="isRegistered" id="registered" class="radio-inline"> Yes
+    </label>
+    <label for="notRegistered">
+        <input type="radio" value="false" name="isRegistered" id="notRegistered" class="radio-inline"> No
+      </label>
   <h2>Features</h2>
   <div *ngFor="let f of features" class="checkbox">
     <label for="feature{{ f.id }}">
       <input type="checkbox" id="feature{{ f.id }}"> {{ f.name }}
     </label>
   </div>
+  <h2>Contact</h2>
+  <div class="form-group">
+    <label for="contactName">Name</label>
+    <input type="text" id="contactName" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="contactPhone">Phone</label>
+    <input type="text" id="contactPhone" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="contactEmail">Email</label>
+    <input type="text" id="contactEmail" class="form-control">
+  </div>
+  <button class="btn btn-primary">Save</button>
 </form>
