--- a/AngularASP.NET/testAngularJS/Views/Shared/_Layout.cshtml
+++ b/AngularASP.NET/testAngularJS/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - employeesFactory</title>
+    <title>@ViewData["Title"] - testAngularJS</title>
     
     <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
             asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.css"
@@ -22,11 +22,14 @@
         </script>
         
         
-       <script src="~/js/site.js" asp-append-version="true"></script>
-       
-      
-      
-        
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
+
+    
+     
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/app/script.js" asp-append-version="true"></script>
+
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
