--- a/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
@@ -20,9 +20,18 @@
                 asp-fallback-src="~/lib/jquery/dist/jquery.js"
                 asp-fallback-test="window.jQuery">
         </script>
-        
-        
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
        <script src="~/js/site.js" asp-append-version="true"></script>
+       <script src="~/js/SPA/app.js" asp-append-version="true"></script>
+
+
+    
        
       
       
