--- a/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
 
        <script src="~/js/site.js" asp-append-version="true"></script>
        <script src="~/js/SPA/app.js" asp-append-version="true"></script>
+       <script src="~/js/SPA/pController.js" asp-append-version="true"></script>
+       <script src="~/js/SPA/pService.js" asp-append-version="true"></script>
 
 
     
