--- a/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-<div ng-app="app" ng-controller="pController">
+<div ng-controller="pController">
       <p>{{ 1+2 }}</p>
 
 <table>
@@ -22,7 +22,7 @@
         <th>Employee Id</th>
         <th>Name</th>
         <th>Email</th>
-        <th>Company</th>
+        <th>Company Id</th>
     </tr>
     <tr ng-repeat="e in emp">
         <td>{{ e.companyId }}</td>
