--- a/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body ng-app="app">
     <div class="container body-content">
         @RenderBody()
     </div>
@@ -21,16 +21,32 @@
                 asp-fallback-test="window.jQuery">
         </script>
 
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script> 
 
-       <script src="~/js/site.js" asp-append-version="true"></script>
        <script src="~/js/SPA/app.js" asp-append-version="true"></script>
        <script src="~/js/SPA/pController.js" asp-append-version="true"></script>
+       <script src="~/js/SPA/pFormController.js" asp-append-version="true"></script>
+       <script src="~/js/SPA/SelectAsyncController.js" asp-append-version="true"></script>
+       <script src="~/js/site.js" asp-append-version="true"></script>
+
        <script src="~/js/SPA/pService.js" asp-append-version="true"></script>
+       
+
+
+
+
+
+
+       
 
 
     
