--- a/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         <th>Company Id</th>
     </tr>
     <tr ng-repeat="e in emp">
-        <td>{{ e.companyId }}</td>
+        <td>{{ e.employeeId }}</td>
         <td>{{ e.firstName }}</td>
         <td>{{ e.email }}</td>
         <td>{{ e.companyId }} </td>
