--- a/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
@@ -1,36 +1,9 @@
-<div ng-controller="pController">
-      <p>{{ 1+2 }}</p>
+<div ng-controller="ctrl"> 
+    <p>{{ 1+2 }}</p>
+    <p>{{ word }}</p>
+    <a href="#/list">List</a>
+    <br />
+    <a href="#/form">Add Employee Form</a>
 
-<table>
-    <tr>
-        <th>CompanyId</th>
-        <th>Name</th>
-        <th>Address</th>
-        <th>Workers</th>
-    </tr>
-    <tr ng-repeat="i in data">
-        <td>{{ i.companyId }}</td>
-        <td>{{ i.name }}</td>
-        <td>{{ i.address }}</td>
-        <td>{{ i.workers }}</td>
-
-    </tr>
-</table>
-<hr>
-<table>
-    <tr>
-        <th>Employee Id</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Company Id</th>
-    </tr>
-    <tr ng-repeat="e in emp">
-        <td>{{ e.employeeId }}</td>
-        <td>{{ e.firstName }}</td>
-        <td>{{ e.email }}</td>
-        <td>{{ e.companyId }} </td>
-    </tr>
-</table>
-
-
-    </div>
+    <div ng-view></div>
+</div>
