--- a/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Shared/_Layout.cshtml
@@ -33,9 +33,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script> 
 
        <script src="~/js/SPA/app.js" asp-append-version="true"></script>
+       <script src="~/js/SPA/ctrl.js" asp-append-version="true"></script>
        <script src="~/js/SPA/pController.js" asp-append-version="true"></script>
        <script src="~/js/SPA/pFormController.js" asp-append-version="true"></script>
-       <script src="~/js/SPA/SelectAsyncController.js" asp-append-version="true"></script>
+       <script src="~/js/SPA/pFormEditController.js" asp-append-version="true"></script>
        <script src="~/js/site.js" asp-append-version="true"></script>
 
        <script src="~/js/SPA/pService.js" asp-append-version="true"></script>
