AngularJS all set

--- a/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 <div ng-controller="ctrl"> 
     <p>{{ 1+2 }}</p>
     <p>{{ word }}</p>
-    <a href="#/list">List</a>
+    <a href="/#/list">List</a>
     <br />
-    <a href="#/form">Add Employee Form</a>
+    <a href="/#/Form">Add Employee Form</a>
+    
+    <ng-view></ng-view>
 
-    <div ng-view></div>
 </div>
