--- a/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 <div ng-controller="ctrl"> 
-    <p>{{ 1+2 }}</p>
+<h1>Welcome to my ASP.NET Entity Framework AngularJS app!</h1>
     <p>{{ word }}</p>
-    <a href="/#/list">List</a>
+    <a href="/#/list">General List</a>
     <br />
     <a href="/#/Form">Add Employee Form</a>
     <hr>
