--- a/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
+++ b/AngularASP.NET/employeesFactory/Views/Home/Index.cshtml
@@ -3,7 +3,9 @@
     <p>{{ word }}</p>
     <a href="/#/list">General List</a>
     <br />
-    <a href="/#/Form">Add Employee Form</a>
+    <a href="/#/employee_form">Add Employee</a>
+    <br />
+    <a href="/#/company_form">Add Company</a>
     <hr>
 
     <ng-view></ng-view>
