--- a/AngularASP.NET/employeesFactory/wwwroot/js/SPA/Templates/empForm.html
+++ b/AngularASP.NET/employeesFactory/wwwroot/js/SPA/Templates/empForm.html
@@ -1,6 +1,6 @@
 <div ng-controller="pFormController">
     <form role="form" ng-submit="submitForm()">
-        <h2>Form</h2>
+        <h2>Add new employee</h2>
             <div class="form-group">
               <label for="firstName"> First Name</label> 
               <input class="form-control" name="firstName" id="firstName" ng-model="FirstName"> 
