--- a/AngularASP.NET/employeesFactory/wwwroot/js/SPA/Templates/list.html
+++ b/AngularASP.NET/employeesFactory/wwwroot/js/SPA/Templates/list.html
@@ -1,4 +1,5 @@
 <div ng-controller="pController">
+        <h1>Companies</h1>
     <table>
         <tr>
             <th></th>
@@ -29,6 +30,7 @@
         </tr>
     </table>
     <hr>
+    <h1>Employees</h1>
     <table>
         <tr>
             <th></th>
