--- a/C#/LoginRegCore/LoginRegCore/wwwroot/css/site.css
+++ b/C#/LoginRegCore/LoginRegCore/wwwroot/css/site.css
@@ -4,6 +4,9 @@ body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
+li {
+    cursor: pointer;
+}
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
